FIXED: Reset Button.
Padding made the RESET button out of screen.

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ button {
 .reset-container {
     display: flex;
     justify-content: center;
-    padding-top: 20%;
+    padding-top: 10%;
 }
 
 .reset-container #reset {
